# feRcuda

./: .gitignore  AGENT_MCP_CONTRACTS.md  CMakeLists.txt  JIT_CONTRACTS.md  README.md  diagram.txt
docs/: build_wheel_after_restart.txt  hackathon_demo_guide.txt  what_is_fercuda.txt
examples/: demo_persistent.cu
include/fercuda/agent/: mcp_adapter.h  mcp_json_adapter.h
include/fercuda/algorithms/: layernorm_attachment.cuh  matmul_attachment.cuh
include/fercuda/alloc/: memory.cuh
include/fercuda/api/: c_api.h  intercept_telemetry.h
include/fercuda/compute/: ops.cuh  registry.cuh  types.cuh
include/fercuda/core/: runtime.cuh  status.cuh
include/fercuda/experimental/: ca.cuh
include/fercuda/integration/: gpu_hot_regime.cuh
include/fercuda/jit/: api.h  manager.cuh  script_host.h  script_runtime.h  types.h
include/fercuda/jit/intent/: intent.h
include/fercuda/jit/lowering/: capabilities.h  fusion.h  ir.h  pass.h  pipeline.h
include/fercuda/runtime/: api_types.cuh  exec_planner.cuh  job_manager.cuh  regime_manager.cuh  session.cuh
include/fercuda/scheduler/: scheduler.cuh
native/core/hooks/: cuda_context_hook.c  cuda_intercept.c
native/core/jit/: jit_manager.cu  script_runtime.cpp
native/core/jit/intent/: intent_runtime.cpp
native/core/jit/lowering/capabilities/: capability_lowering_pass.cpp  cuda_caps.cpp
native/core/jit/lowering/fusion/: fusion_pass.cpp
native/core/jit/lowering/pipeline/: lowering_pipeline.cpp
native/core/jit/lowering/transforms/: pragma_parse_pass.cpp
python/: README.md  pyproject.toml
python/feRcuda_mega_test/: __init__.py  __main__.py
rust/apps/fercuda-llm-app/: Cargo.toml  README.md
rust/apps/fercuda-llm-app/src/: main.rs
rust/fercuda-ffi/: Cargo.toml  README.md  build.rs
rust/fercuda-ffi/examples/: candle_regime_bridge.rs  cudarc_regime_bridge.rs
rust/fercuda-ffi/src/: adapter_backend.rs  candle_adapter.rs  cudarc_adapter.rs  lib.rs  ml_adapter.rs
rust/fercuda-ffi/tests/: dtype_descriptor_smoke.rs  math_smoke.rs  ml_adapter_smoke.rs  ml_smoke.rs  vision_smoke.rs
scripts/: bench_alloc_vs_cudamalloc.sh  benchmark_external_runtime.sh  build_b200.sh  build_wheel.sh  ferrite-autostart  ferrite-up.sh  install.sh  install_and_run_b200.sh  slurm_run_bench_alloc.sh  slurm_run_demo.sh  slurm_run_extreme.sh  slurm_run_transformer.sh  trim_cache.sh
src/intercept/: cuda_alloc_intercept.cpp
src/jit/: jit_manager.cu
src/jit/intent/: intent_runtime.cpp
src/jit/lowering/fusion/: fusion_pass.cpp
src/jit/lowering/pipeline/: lowering_pipeline.cpp
src/jit/lowering/transforms/: canonicalize_pass.cpp
src/memory/: elastic_pool.cu
src/ops/: activation.cu  elementwise.cu  matmul.cu  norm.cu
src/runtime/: c_api.cu  elastic_pool.cu  exec_planner.cu  job_manager.cu  mcp_adapter.cpp  mcp_json_adapter.cpp  ops_bridge.cu  regime_manager.cu  session.cu
src/scheduler/: persistent_scheduler.cu
tests/: README.md
tests/bench/: bench_alloc_vs_cudamalloc.cu
tests/c_api/: test_c_api_agent_mcp_adapter.cpp  test_c_api_agent_mcp_json_adapter.cpp  test_c_api_bridge.cpp  test_c_api_custom_allocator.cpp  test_c_api_external_ptr_interop.cpp  test_c_api_helper_api.cpp  test_c_api_jit_exec.cpp  test_c_api_jit_intent.cpp  test_c_api_jit_lowering.cpp  test_c_api_jit_stub.cpp  test_c_api_script_runtime.cpp  test_c_api_script_timeout.cpp  test_c_api_stream_handoff.cpp
tests/core/: test_determinism.cu  test_types.cu
tests/experimental/: test_ca.cu  test_ca_kernels.cu
tests/h2d/: test_h2d_isolate.cu  test_h2d_simple_loop.cu  test_h2d_while_sched.cu
tests/integration/: test_gpu_hot_runtime_regime.cpp
tests/intercept/: bench_external_alloc.cu  test_intercept_compat.cpp  test_intercept_stress.cpp
tests/jit/: test_script_cancel_module.cpp  test_script_module.cpp
tests/memory/: test_custom_allocator.cu  test_memory_regime.cu  test_pool_fragmentation_ab.cu  test_pool_reclaim.cu
tests/native/: test_ptx_concurrent_stress.cu  test_ptx_core_init.cpp  test_ptx_fragmentation.cu  test_ptx_prod_stress.cu  test_ptx_tensor_ops.cu  test_ptx_tlsf.cpp
tests/runtime/: test_registry.cu  test_runtime_session.cu
tests/scheduler/: bench_sched_regimes.cu  test_sched_dma_then_ops.cu  test_sched_minimal.cu  test_sched_ops_interop.cu  test_sched_pool_interop.cu  test_sched_smwarp.cu  test_sched_work.cu
